Menu bar is now fixed and is not overlapping any content

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #ebf2f7;
+  padding-top: 65px;
 }
 
 code {
